# pgcopydb

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.debian  Dockerfile.live-migration  LIVE-MIGRATION.md  Makefile  README.md  orchestrate.py
.github/workflows/: docker-publish-ts.yml  docker-publish.yml  integration.yml  run-tests.yml
docs/ref/: pgcopydb_stream.rst
housekeeping/: README.md  housekeeping.py
integration/: Cargo.toml
integration/tests/: main.rs
snap/: snapcraft.yaml
tests/: Makefile
tests/cdc-generated-column/: ddl.sql
tests/cdc-test-decoding/: copydb.sh  ddl.sql  dml.sql
tests/endpos-in-multi-wal-txn/: copydb.sh  docker-compose.yml  multi-wal-txn.sql
tests/extensions/: copydb.sh
tests/filtering/: copydb.sh  docker-compose.yml  exclude.ini  extra.sql
tests/filtering/exclude/expected/: 1-ignore-matview.out
tests/follow-data-only/: copydb.sh  ddl.sql  docker-compose.yml  inject.sh
tests/target-only-partition/: copydb.sh  dml.sql
tests/target-only-timescaledb-hypertable/: copydb.sh  ddl.sql  docker-compose.yml
tests/timescaledb/: Dockerfile  copydb.sh  docker-compose.yml  rides.sql  tsdb_grants.sql
tests/timescaledb-test-decoding/: Dockerfile  Dockerfile.tsdb.wal2json  copydb.sh  docker-compose.yml  rides.sql  tsdb_grants.sql
tests/timescaledb-test-decoding/tests/numeric/: delete-large-precision.sql  insert-nan-inf.sql  insert-with-large-precision.sql  update-large-precision.sql  update-nan-inf.sql
