[package]
name = "integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
test-common = { git = "ssh://git@github.com/timescale/test-common.git", rev = "v0.14.0"}

[dependencies]
anyhow = "1.0.82"
pretty_env_logger = "0.5.0"
tempfile = "3.10.1"
testcontainers = "0.14.0"
tokio = "1.37.0"
tokio-postgres = "0.7.10"
